<resources>
    <string name="app_name">DicodingStoryApp</string>

    <string name="menuTitle1">Home</string>
    <string name="menuTitle2">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="value_register">Dont have an account? Register here</string>
    <string name="storyapp_2023">StoryApp @2023</string>
    <string name="register">Register</string>
    <string name="join_login">Go to Login page</string>
    <string name="btn_register">Register</string>
    <string name="placeholder_username">Dandy Candra</string>
    <string name="dandy_candra">Dandy Candra</string>
    <string name="emaill">dandycandra13@gmail.com</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description_placeholder">Whats Happening?</string>
    <string name="upload_photo">Upload</string>
    <string name="subtitle">Story</string>
    <string name="username">username</string>
    <string name="description">description</string>
    <string name="createdat">createdAt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="usernameHint">Username</string>
    <string name="errorEmail">Format email is not correct</string>
    <string name="errorPassword">Format password must be more than 7 characters</string>
    <string name="errorHandlingRegister">Invalid input for username or password or email</string>
    <string name="errorHandlingLogin">Invalid input for password or email</string>
    <string name="greeting">Congratulations!</string>
    <string name="greetingBody">Your New Account has been created</string>
    <string name="loginSuccess">Login Success</string>
    <string name="uploadSuccess">Upload Success</string>
    <string name="errorHandlingDesc">Description Cant be empty</string>
    <string name="errorHandlingPhoto">Photo Cant be empty</string>
    <string name="choosePhoto">Choose a photo</string>
    <string name="noStories">No stories found</string>
    <string name="retry">Retry</string>
    <string name="menuTitle3">StoryMaps</string>
    <string name="location">Location</string>
    <string name="splashScreen">SplashScreen</string>
    <string name="btnHide">buttonHide</string>
    <string name="descImageStory">ImageStory</string>
    <string name="descFloatingAction">Floating Action Button</string>
    <string name="descImageLogin">Image Login</string>
    <string name="emailPlaceHolder">Email</string>
    <string name="passwordPlaceHolder">Password</string>
    <string name="descBtnShowSheet">Button Show Sheet</string>
    <string name="descImageProfile">Profile Image</string>
    <string name="descBtnSetting">Setting </string>
    <string name="descRegisterImage">Register Image</string>
</resources>