<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.addStory.AddStoryFragment">


    <ImageView
        android:id="@+id/imgView"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:src="@drawable/bg_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchLocation"
        android:contentDescription="@string/descImageStory" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/gallery"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <Button
        android:id="@+id/btnCamera"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/camera"
        android:textColor="@color/mainColor"
        app:strokeColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/description_placeholder"
        android:inputType="textMultiLine"
        android:lineSpacingMultiplier="1.8"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery"
        android:textColor="@color/black"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload_photo"
        android:backgroundTint="@color/mainColor"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>